Platform: Add gcc support for TFM_LVL==3
Add sections and symbols to the linker configuration file of the secure
software to be compatible with the expectations of the TF-M SPM.

Change-Id: Ib13092bd3519948e7c73a31ce3dc00ce6c11ed94
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -25,6 +25,11 @@
         "name": "Secure Function list",
         "short_name": "tfm_sfid_list",
         "output": "secure_fw/services/tfm_sfid_list.inc"
+    },
+    {
+        "name": "AN521 secure ld file",
+        "short_name": "mps2_an521_s_ld",
+        "output": "platform/ext/target/mps2/an521/gcc/mps2_an521_s.ld"
     }
   ]
 }
