Platform: Add Musca test chip support
1) Files derived from the following keil packs
    keil-pack-musca-a1 release_v1.0.1
    keil-pack-sse-200  release_v1.0.3
2) Add Musca target configuration and partition files
3) Add Musca platform support in cmake files
4) Enable BL2 with Musca test chip
5) Create signed binary with correct size for MPS2 platforms

Change-Id: I0ab913110b0817b7e8d7424812b978526487a3d0
Signed-off-by: Avinash Mehta <avinash.mehta@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -93,7 +93,7 @@ if (BL2)
 	find_package(PythonInterp 3)
 
 	if (NOT PYTHONINTERP_FOUND)
-		message(FATAL_ERROR "Failed to find Python3.x interpreter. Pyhton3 must be installed an available on the PATH.")
+		message(FATAL_ERROR "Failed to find Python3.x interpreter. Python3 must be installed and available on the PATH.")
 	endif()
 
 	set(MCUBOOT_DIR ${TFM_ROOT_DIR}/bl2/ext/mcuboot)
@@ -119,7 +119,7 @@ endif()
 							 --align 1
 							 -v 1.0
 							 -H 0x400
-							 --pad 0x100000
+							 --pad ${SIGN_BIN_SIZE}
 							 ${CMAKE_BINARY_DIR}/tfm_full.bin
 							 ${CMAKE_BINARY_DIR}/tfm_sign.bin
 				)
