Platform: Add GNUARM support for AN519 platform.
Details:
 - add startup files and linker scripts needed
 - update platform/ext/Mps2AN519.cmake
 - fix region_defs.h syntax to be compatible with the linker
 - set unified syntax for naked functions

Change-Id: Iab17f1af1470798ceb991ef89aa77abfb00f2df1
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -30,6 +30,11 @@
         "name": "AN521 secure ld file",
         "short_name": "mps2_an521_s_ld",
         "output": "platform/ext/target/mps2/an521/gcc/mps2_an521_s.ld"
+    },
+    {
+        "name": "AN519 secure ld file",
+        "short_name": "mps2_an519_s.ld",
+        "output": "platform/ext/target/mps2/an519/gcc/mps2_an519_s.ld"
     }
   ]
 }
