SST: Add encrypted object layer above sst core
This patch brings the encryption and decryption of object data out of
sst_core and into a new layer that sits between the object system
and sst core.

Change-Id: I2c122f7744fedac865e9f461da03a83723bbe068
Signed-off-by: Jamie Fox <jamie.fox@arm.com>
Co-Authored-by: Marc Moreno <marc.morenoberengue@arm.com>

--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -69,6 +69,7 @@
   "source_files": [
     "sst_core.c",
     "sst_utils.c",
+    "sst_encrypted_object.c",
     "sst_object_system.c",
     "sst_asset_management.c",
     "assets/sst_asset_defs.c",
