Platform: Move isolation hw code to SPM hal
Moves code related to hardware specific aspects of MPU, PPC, MPC and SAU
to SPM hal. Leaves the code parts that use cmse defined interface to
access these peripherals in secure_sw folder.

Change-Id: I594847686cac51ee0f9fae217152b6e90723bb9e
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/secure_fw/services/audit_logging/manifest.yaml
+++ b/secure_fw/services/audit_logging/manifest.yaml
@@ -17,11 +17,8 @@
   "heap_size": "0x0400",
   "mmio_regions" : [
     {
-      "name": "UART1",
-      "base": "UART1_BASE_S",
-      "size": "0xFFF",
+      "name": "TFM_PERIPHERAL_UART1",
       "permission": "READ-WRITE",
-      "ppc_config": "PPC_SP_APB_PPC_EXP1, CMSDK_UART1_APB_PPC_POS",
       "conditional": "LOG_UART_REDIRECTION"
     }
   ],
