CMake: collect executables to common location
Install target was extended to copy all artefacts to a
common location with elaborate naming convention.

Change-Id: I529ccd5ffd8bace7d015f093a1c1561c05eac6ff
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -234,7 +234,7 @@ if (LINK_TO_BOTH_MEMORY_REGION)
 					 FULL_BIN      tfm_full
 					 SIGN_BIN      tfm_sign
 					 VENEER_NAME   s_veneers
-					 POSTFIX       _0)
+					 POSTFIX       "_0")
 
 	#Link to secondary memory region(add extra linker flag)
 	set_up_app_build(NS_TARGET      ${PROJECT_NAME}
@@ -243,7 +243,7 @@ if (LINK_TO_BOTH_MEMORY_REGION)
 					 FULL_BIN      tfm_full
 					 SIGN_BIN      tfm_sign
 					 VENEER_NAME   s_veneers
-					 POSTFIX       _1)
+					 POSTFIX       "_1")
 else()
 	#Link to primary memory region only
 	set_up_app_build(NS_TARGET      ${PROJECT_NAME}
