Platform: Add GNUARM support for Musca platform
Details:
 - add necessary startup files and linker scripts
 - update platform/ext/musca_a.cmake
 - fix region_defs.h syntax to be compatible with the linker
 - add special 4 byte aligned memset and memcpy functions to flash
   driver

Change-Id: I2339abeff1f0187053d39c1f000bf95c7f8a200f
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -122,7 +122,7 @@ function(set_up_secure_fw_build)
 		if(${COMPILER} STREQUAL "ARMCLANG")
 			target_link_libraries(${EXE_NAME} tfm_storage tfm_audit $<TARGET_LINKER_FILE:tfm_secure_tests>\(*veneers.o\) tfm_secure_tests)
 		elseif(${COMPILER} STREQUAL "GNUARM")
-			target_link_libraries(${EXE_NAME} -Wl,--whole-archive tfm_secure_tests -Wl,--no-whole-archive tfm_storage tfm_audit)
+			target_link_libraries(${EXE_NAME} tfm_secure_tests tfm_storage tfm_audit)
 		else()
 			message(FATAL_ERROR "unknown compiler" )
 		endif()
