SST: Rename prepare and wipe interface names
This patch renames filenames and interface names to have a more
consistent names. It also updates the dependant tests.

The changes are:
 - sst_core_interface files to sst_object_system
 - sst_object_prepare interface to sst_system_prepare
 - sst_object_wipe_all interface to sst_system_wipe_all
 - asset to object
 - add missing platform/ext/driver directory in cmake

Change-Id: I975d60e6ececec05373bcf94d7bc2ddfe03ac7f6
Signed-off-by: Marc Moreno <marc.morenoberengue@arm.com>

--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -69,7 +69,7 @@
   "source_files": [
     "sst_core.c",
     "sst_utils.c",
-    "sst_core_interface.c",
+    "sst_object_system.c",
     "sst_asset_management.c",
     "assets/sst_asset_defs.c",
     "crypto/sst_crypto_interface.c",
